# RW-Trader

./: .gitignore  Procfile  README.md  deploy-local.sh  deploy-remote.sh  rw-trader-events.db-shm  rw-trader-events.db-wal
rw-trader(1)/rw-trader/src/: client.rs  reader.rs  strategy.rs  webui.rs
rw-trader.tar/: rw-trader.tar
rw-trader.tar/rw-trader(1)/rw-trader/: Cargo.toml  deploy-remote.sh
rw-trader.tar/rw-trader(1)/rw-trader/src/: authority.rs  main.rs  suggestions.rs
rw-trader.tar/rw-trader/rw-trader/src/: assistant.rs  executor.rs  feed.rs  main.rs  position.rs  replay.rs  risk.rs  signal.rs  strategy.rs
sain-flights/: .env.example  jest.config.js  package-lock.json  package.json  tsconfig.json
sain-flights/docs/: field-mode.md
sain-flights/propulsion-controller/src/: config.ts  field-solver.ts  flight-controller-link.ts  mavlink-bridge-impl.ts  mavlink-bridge.ts  propulsion-controller.ts
sain-flights/propulsion-controller/src/__tests__/: field-solver.test.ts
sain-flights/propulsion-controller/src/adapters/: mavlink-adapter.ts  sim-adapter.ts
scripts/: flip_hyper_diagnostic.py
src/: agent.rs  assistant.rs  client.rs  closed_loop.rs  events.rs  executor.rs  feed.rs  main.rs  npc.rs  orders.rs  phase1.rs  portfolio.rs  profile.rs  reader.rs  reconciler.rs  replay.rs  risk.rs  signal.rs  store.rs  strategy.rs  suggestions.rs  webui.rs  withdrawal.rs
