[package]
name = "rw-trader"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# Signing
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Unique IDs (event_id, correlation_id)
uuid = { version = "1", features = ["v4"] }

# SQLite event store
rusqlite = { version = "0.31", features = ["bundled"] }

# Connection pool for SQLite reader connections
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config from .env
dotenvy = "0.15"

# Error handling
anyhow = "1"

[dev-dependencies]
# Temporary directories for SQLite tests
tempfile = "3"
